modified styles and html pages

--- a/pro_farm/templates/wheather.html
+++ b/pro_farm/templates/wheather.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Document</title>
+    <title></title>
 
     <!-- links -->
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,800,900&display=swap"
@@ -17,16 +17,66 @@
     <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\owl.carousel.min.css">
     <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\flaticon.css">
     <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\style.css">
-
+<link rel="stylesheet" href="weather_animation.css">
 
 
     <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\icomoon.css">
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <!-- <link rel="stylesheet" href="\..\racks\css\style.css"> -->
+
+    <!-- <style>
+
+        *{
+            box-sizing: border-box;
+        }
+        .primary{
+            position:relative;
+            width:100%;
+            height:100vh;
+            background: url("/../farm_app/pro_farm/static/images/night_image.jpg");
+            background-size: cover;
+            background-position:bottom;
+        }
+
+        .primary .clouds{
+            position:absolute;
+            top:0;
+            left:0;
+            width:100%;
+            height:100%;
+            overflow:hidden;
+        }
+
+        .primary .clouds img{
+            position: absolute;
+            bottom: 0;
+            max-width: 100%;
+            animation: animate calc(9s * var(--i))linear infinite;
+        }
+
+        @keyframes animate{
+            0%{
+                transform: translateX(-100%);
+            }
+            100%{
+                transform: translateX(100%);
+            }
+        }
+    </style> -->
 </head>
 
 <body>
 
+    <div class="primary">
+<div class="clouds">
+    <img src="../static/images/cloud1.png" style="--i:1;">
+    <img src="../static/images/cloud1.png" style="--i:2;">
+    <img src="../static/images/cloud1.png" style="--i:3;">
+    <img src="../static/images/cloud1.png" style="--i:4;">
+    <img src="../static/images/cloud1.png" style="--i:5;">
+</div>
+    </div>
+<!-- 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
             <a class="navbar-brand" href="home.html">The<span>F</span>armer</a>
@@ -45,11 +95,11 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav> -->
     <!-- ended navbar -->
 
 
-    <section class="hero-wrap degree-right js-fullheight">
+    <!-- <section class="hero-wrap degree-right js-fullheight">
         <div class="home-slider js-fullheight owl-carousel">
             <div class="slider-item js-fullheight"
                 style="background-image:url(/../farm_app/pro_farm/static/images/background4.jpg);">
@@ -59,9 +109,9 @@
                         <div class="col-md-6 ftco-animate">
                             <div class="text">
                                 <h1 class="mb-4">La la la</h1>
-                                <p style="color: white;">Lorem ipsum dolor sit amet.</p>
+                                <p style="color: white;">Lorem ipsum dolor sit amet.</p> -->
                                 <!-- <p class="mb-0"><a href="#" class="btn btn-primary py-md-3 py-2 px-2 px-md-4">Done</a></p> -->
-                            </div>
+                            <!-- </div> -->
                             <!-- <div class="container">
                                 <div class="row">
                                     <div class="col-md-2">
@@ -82,7 +132,7 @@
                                     </div>
                                 </div>
                             </div> -->
-                        </div>
+                        <!-- </div>
                         <div class="col-lg-6 ftco-animate" style="position: relative; left:1px;">
                             <div class="container">
                                 <div class="row">
@@ -109,9 +159,9 @@
                         <div class="col-md-6 ftco-animate">
                             <div class="text">
                                 <h1 class="mb-4">La la la</h1>
-                                <p style="color: white;">Lorem ipsum dolor sit amet.</p>
+                                <p style="color: white;">Lorem ipsum dolor sit amet.</p> -->
                                 <!-- <p class="mb-0"><a href="#" class="btn btn-primary py-md-3 py-2 px-2 px-md-4">Done</a></p> -->
-                            </div>
+                            <!-- </div> -->
                             <!-- <div class="container">
                                             <div class="row">
                                                 <div class="col-md-2">
@@ -132,7 +182,7 @@
                                                 </div>
                                             </div>
                                         </div> -->
-                        </div>
+                        <!-- </div>
                         <div class="col-lg-6 ftco-animate" style="position: relative; left:1px;">
                             <div class="container">
                                 <div class="row">
@@ -159,9 +209,9 @@
                         <div class="col-md-6 ftco-animate">
                             <div class="text">
                                 <h1 class="mb-4">La la la</h1>
-                                <p style="color: white;">Lorem ipsum dolor sit amet.</p>
+                                <p style="color: white;">Lorem ipsum dolor sit amet.</p> -->
                                 <!-- <p class="mb-0"><a href="#" class="btn btn-primary py-md-3 py-2 px-2 px-md-4">Done</a></p> -->
-                            </div>
+                            <!-- </div> -->
                             <!-- <div class="container">
                                                         <div class="row">
                                                             <div class="col-md-2">
@@ -182,7 +232,7 @@
                                                             </div>
                                                         </div>
                                                     </div> -->
-                        </div>
+                        <!-- </div>
                         <div class="col-lg-6 ftco-animate" style="position: relative; left:1px;">
                             <div class="container">
                                 <div class="row">
@@ -202,7 +252,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
 <!-- ============================================================================================================== -->
