--- a/pro_farm/static/css/style.css
+++ b/pro_farm/static/css/style.css
@@ -13990,7 +13990,7 @@ iframe {
 
 .blog-entry-2 {
   background: #fff;
-  border-radius: 25px;
+  /* border-radius: 25px; */
   transition: transform 0.2s;
   -webkit-box-shadow: 0px 4px 18px -12px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 4px 18px -12px rgba(0, 0, 0, 0.75);
@@ -14079,8 +14079,8 @@ iframe {
 .block-20-1 {
   overflow: hidden;
   background-size: cover;
-  border-top-right-radius: 25px;
-  border-top-left-radius: 25px;
+  /* border-top-right-radius: 25px;
+  border-top-left-radius: 25px; */
   background-repeat: no-repeat;
   background-position: center center;
   height: 350px;
